# UNAudio

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PLAN.md  QUICKSTART.md  README.md  _codeql_detected_source_root  package.json  plan.md
.github/workflows/: android-build.yml  ci.yml  ios-build.yml  native-build.yml  upm-validation.yml
Documentation/: API.md  APIReference.md  AndroidSetup.md  GettingStarted.md  PerformanceGuide.md  PlatformCompatibility.md  iOSSetup.md
Editor/: com.lask3802.unaudio.editor.asmdef
Editor/Scripts/: UNAudioImporter.cs  UNAudioInspector.cs  UNAudioTestWindow.cs
Examples/: UNAudioExample.cs
Native/: CMakeLists.txt
Native/Source/Core/: AudioClock.h  AudioEngine.cpp  AudioEngine.h  AudioTypes.h  CommandQueue.h  EventQueue.h  FrameAllocator.h  MemoryBudget.h  RingBuffer.h  SimdUtils.h
Native/Source/Decoder/: AudioDecoder.h  FLACDecoder.cpp  FLACDecoder.h  MP3Decoder.cpp  MP3Decoder.h  PCMDecoder.cpp  PCMDecoder.h  VorbisDecoder.cpp  VorbisDecoder.h
Native/Source/Mixer/: AudioMixer.cpp  AudioMixer.h
Native/Source/Platform/: AudioOutput.h
Native/Source/Platform/Android/: OboeAudioOutput.cpp
Native/Source/Platform/Linux/: ALSAOutput.cpp
Native/Source/Platform/Windows/: WASAPIOutput.cpp
Native/Source/Platform/iOS/: iOSAudioOutput.mm
Native/Source/Platform/macOS/: CoreAudioOutput.cpp
Native/Tests/: test_frame_allocator.cpp  test_framework.h  test_main.cpp  test_mixer.cpp  test_pcm_decoder.cpp  test_ring_buffer.cpp  test_simd_utils.cpp
NativeSource/Android/: CMakeLists.txt  UNAudioAndroid.cpp  UNAudioAndroid.h
NativeSource/Core/: UNAudioCore.h
NativeSource/iOS/: UNAudioIOS.h  UNAudioIOS.mm
Plugins/Android/: gradlew  settings.gradle
Plugins/Android/unaudio/: build.gradle  proguard-rules.pro
Plugins/Android/unaudio/src/main/: AndroidManifest.xml
Plugins/Scripts/: UNAudioEngine.cs
Runtime/: com.lask3802.unaudio.asmdef
Runtime/Scripts/API/: UNAudioBridge.cs  UNAudioEngine.cs
Runtime/Scripts/Core/: UNAudioClip.cs  UNAudioListener.cs  UNAudioSource.cs
Runtime/Scripts/Utilities/: AudioUtility.cs  UNAudioDebug.cs
Samples~/3DAudio/: README.md
Samples~/BasicPlayback/: README.md
Samples~/MusicGame/: README.md
Tests/: README.md
Tests/Editor/: UNAudioEditorTests.cs  com.lask3802.unaudio.tests.editor.asmdef
Tests/Runtime/: UNAudioRuntimeTests.cs  com.lask3802.unaudio.tests.runtime.asmdef
native/src/: frame_allocator.h
